# bthidhub

./: pyproject.toml  requirements.txt  sans_web.py  setup.py
install/: readme.txt  setup.sh
install/on_rpi/: keypi.service  on_pi_setup.sh
keypi/: cli.py  client.py
