[project]
name = "bthidhub"
version = "0.1"
description = "KeyPi Keyboard Emulator"
readme = "README.md"
authors = [{name = "Jonathan Keane"}]

dependencies = [
    "aiohttp!=3.7.*",
    "aiohttp-security",
    "aiohttp-session",
    "asyncio_glib",
    "bitarray",
    "dasbus",
    "evdev",
    "hid-tools!=0.4",
    "mypy==1.5.1",
    "PyGObject",
    "pyudev",
    "watchfiles",
    "click",
]

[project.scripts]
keypi = "bthidhub.cli:keypi"

[tool.setuptools]
py-modules = ["web", "stubs"]